infrastructure/k8s/fastapi-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-route
  namespace: daniel-g-fisher-dev
spec:
  to:
    kind: Service
    name: fastapi-service
    weight: 100
  port:
    targetPort: 80
